--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -8,14 +8,14 @@ on:
 
 jobs:
   build-and-test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
         - uses: actions/checkout@v3
 
         - name: Set up Go
           uses: actions/setup-go@v4
           with:
-            go-version: '1.20'
+            go-version: '1.21.4'
             cache-dependency-path: go.sum
 
         - name: Build
@@ -26,12 +26,12 @@ jobs:
 
   linter:
     name: lint
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
         with:
-          go-version: '1.20'
+          go-version: '1.21.4'
           cache: false
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
